Integrate Kronos tooling